--- a/motion-graphics-background.html
+++ b/motion-graphics-background.html
@@ -1744,128 +1744,7 @@
       <footer class="g-bg-secondary">
         <div class="g-brd-bottom g-brd-secondary-light-v2 g-py-50 g-mb-50">
           <div class="container">
-            <h3 class="h6 g-font-primary g-font-weight-700 text-uppercase mb-3">Popular Stories</h3>
-
-            <!-- Footer - Popular Stories Carousel -->
-            <div id="carouselCus2" class="js-carousel g-mx-minus-10"
-                 data-infinite="true"
-                 data-slides-show="4"
-                 data-autoplay="true"
-                 data-speed="7000"
-                 data-lazy-load="ondemand"
-                 data-arrows-classes="u-arrow-v1 g-pos-abs g-top-minus-35 g-width-30 g-height-30 g-color-secondary-dark-v1 g-color-primary--hover"
-                 data-arrow-left-classes="fa fa-angle-left g-right-30"
-                 data-arrow-right-classes="fa fa-angle-right g-right-0">
-              <div class="js-slide g-px-10">
-                <!-- Article -->
-                <article class="media g-bg-white g-pa-10">
-                  <figure class="d-flex g-width-70 g-height-70 g-pos-rel mr-3">
-                    <img class="img-fluid" src="blog/assets/img-temp/230x230/img10.jpg" alt="SPurno Animation Studio">
-
-                    <figcaption class="g-absolute-centered">
-                      <a class="js-fancybox d-block" href="https://vimeo.com/167434033" title="Single Image">
-                        <span class="u-icon-v2 u-icon-size--xs g-brd-white g-color-white g-color-primary--hover g-bg-white--hover rounded-circle g-cursor-pointer">
-                          <i class="g-pos-rel g-left-2 fa fa-play"></i>
-                        </span>
-                      </a>
-                    </figcaption>
-                  </figure>
-
-                  <div class="media-body">
-                    <a class="d-block g-color-bluegray g-font-weight-700 g-font-size-12 text-uppercase mb-1" href="#">Architecture</a>
-                    <h4 class="g-font-size-13 mb-0"><a class="u-link-v5 g-color-main g-color-primary--hover" href="#">Office III builds simple open-air center on Island</a></h4>
-                  </div>
-                </article>
-                <!-- End Article -->
-              </div>
-
-              <div class="js-slide g-px-10">
-                <!-- Article -->
-                <article class="media g-bg-white g-pa-10">
-                  <figure class="d-flex g-width-70 g-height-70 mr-3">
-                    <img class="img-fluid" src="blog/assets/img-temp/230x230/img5.jpg" alt="SPurno Animation Studio">
-                  </figure>
-
-                  <div class="media-body">
-                    <a class="d-block g-color-lightred g-font-weight-700 g-font-size-12 text-uppercase mb-1" href="#">Travel</a>
-                    <h4 class="g-font-size-13 mb-0"><a class="u-link-v5 g-color-main g-color-primary--hover" href="#">Revealed: World's 10 most beautiful cities</a></h4>
-                  </div>
-                </article>
-                <!-- End Article -->
-              </div>
-
-              <div class="js-slide g-px-10">
-                <!-- Article -->
-                <article class="media g-bg-white g-pa-10">
-                  <figure class="d-flex g-width-70 g-height-70 g-pos-rel mr-3">
-                    <img class="img-fluid" src="blog/assets/img-temp/230x230/img6.jpg" alt="SPurno Animation Studio">
-
-                    <figcaption class="g-absolute-centered">
-                      <a class="js-fancybox d-block" href="https://vimeo.com/167434033" title="Single Image">
-                        <span class="u-icon-v2 u-icon-size--xs g-brd-white g-color-white g-color-primary--hover g-bg-white--hover rounded-circle g-cursor-pointer">
-                          <i class="g-pos-rel g-left-2 fa fa-play"></i>
-                        </span>
-                      </a>
-                    </figcaption>
-                  </figure>
-
-                  <div class="media-body">
-                    <a class="d-block g-color-teal g-font-weight-700 g-font-size-12 text-uppercase mb-1" href="#">Hi-Tech</a>
-                    <h4 class="g-font-size-13 mb-0"><a class="u-link-v5 g-color-main g-color-primary--hover" href="#">Borrowing goes hi-tech at library</a></h4>
-                  </div>
-                </article>
-                <!-- End Article -->
-              </div>
-
-              <div class="js-slide g-px-10">
-                <!-- Article -->
-                <article class="media g-bg-white g-pa-10">
-                  <figure class="d-flex g-width-70 g-height-70 mr-3">
-                    <img class="img-fluid" src="blog/assets/img-temp/230x230/img7.jpg" alt="SPurno Animation Studio">
-                  </figure>
-
-                  <div class="media-body">
-                    <a class="d-block g-color-cyan g-font-weight-700 g-font-size-12 text-uppercase mb-1" href="#">Sport</a>
-                    <h4 class="g-font-size-13 mb-0"><a class="u-link-v5 g-color-main g-color-primary--hover" href="#">Adidas originals unveils the new tubular dawn</a></h4>
-                  </div>
-                </article>
-                <!-- End Article -->
-              </div>
-
-              <div class="js-slide g-px-10">
-                <!-- Article -->
-                <article class="media g-bg-white g-pa-10">
-                  <figure class="d-flex g-width-70 g-height-70 mr-3">
-                    <img class="img-fluid" src="blog/assets/img-temp/230x230/img8.jpg" alt="SPurno Animation Studio">
-                  </figure>
-
-                  <div class="media-body">
-                    <a class="d-block g-color-purple g-color-purple--hover g-font-weight-700 g-font-size-12 text-uppercase mb-1" href="#">Start-Up</a>
-                    <h4 class="g-font-size-13 mb-0"><a class="u-link-v5 g-color-main g-color-primary--hover" href="#">Apple video explain how iOS work on MacBook</a></h4>
-                  </div>
-                </article>
-                <!-- End Article -->
-              </div>
-
-              <div class="js-slide g-px-10">
-                <!-- Article -->
-                <article class="media g-bg-white g-pa-10">
-                  <figure class="d-flex g-width-70 g-height-70 mr-3">
-                    <img class="img-fluid" src="blog/assets/img-temp/230x230/img9.jpg" alt="SPurno Animation Studio">
-                  </figure>
-
-                  <div class="media-body">
-                    <a class="d-block g-color-brown g-font-weight-700 g-font-size-12 text-uppercase mb-1" href="#">Fashion</a>
-                    <h4 class="g-font-size-13 mb-0"><a class="u-link-v5 g-color-main g-color-primary--hover" href="#">Olivia Palermo reveals zara strategy</a></h4>
-                  </div>
-                </article>
-                <!-- End Article -->
-              </div>
-            </div>
-            <!-- End Footer - Popular Stories Carousel -->
-          </div>
-        </div>
-
+ 
         <div class="container">
           <!-- Footer - Content -->
           <div class="g-brd-bottom--md g-brd-secondary-light-v2 g-pb-30--md g-mb-30">
@@ -1873,100 +1752,14 @@
               <div class="col-6 col-md-3 g-brd-right--md g-brd-secondary-light-v2 g-mb-30 g-mb-0--md">
                 <h3 class="h6 g-font-primary g-font-weight-700 text-uppercase mb-3">News</h3>
 
-                <!-- News -->
-                <ul class="list-unstyled mb-0">
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">World</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">U.S.</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Politics</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Business</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Economy</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Tech</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Science</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Health</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Sports</a>
-                  </li>
-                  <li class="g-px-0 g-my-8">
-                    <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                    <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Education</a>
-                  </li>
-                </ul>
-                <!-- End News -->
+ 
               </div>
 
               <div class="col-6 col-md-3 g-brd-right--md g-brd-secondary-light-v2 g-mb-30 g-mb-0--md">
                 <div class="g-pl-10--md">
                   <h3 class="h6 g-font-primary g-font-weight-700 text-uppercase mb-3">Opinion</h3>
 
-                  <!-- Opinion -->
-                  <ul class="list-unstyled mb-0">
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Today's Opinion</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Contributing Writers</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Letters</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Sunday Review</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Taking Note</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Room for Debate</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Op-Ed Columnists</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Editorials</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Op-Ed Contributors</a>
-                    </li>
-                    <li class="g-px-0 g-my-8">
-                      <i class="g-color-primary mr-2 fa fa-angle-right"></i>
-                      <a class="u-link-v5 g-color-secondary-dark-v1 g-color-primary--hover g-font-size-13 g-pl-0 g-pl-7--hover g-transition-0_3 g-py-7" href="#">Video: Opinion</a>
-                    </li>
-                  </ul>
-                  <!-- End Opinion -->
+ 
                 </div>
               </div>
 
@@ -2077,7 +1870,7 @@
               <div class="col-md-4 g-hidden-sm-down g-mb-30">
                 <!-- Logo -->
                 <a href="https://spurno.github.io">
-                  <img class="g-width-150" src="assets/img/logo/logo.png" alt="Logo" style="height: 100px; width: 100px;">
+                  <img class="g-width-150" src="images/spurno-logo.png" alt="SPurno Animation Studio Logo">
                 </a>
                 <!-- End Logo -->
               </div>
