--- a/about-us.html
+++ b/about-us.html
@@ -1757,7 +1757,7 @@
                   </div>
 
                   <article class="media g-mb-35">
-                    <img class="d-flex u-shadow-v25 g-width-40 g-height-40 rounded-circle mr-3" src="assets/img/logo/logo.png" alt="SPurno Animation Studio">
+                    <img class="d-flex u-shadow-v25 g-width-40 g-height-40 rounded-circle mr-3" src="images/spurno-logo.png" alt="SPurno Animation Studio">
                     <div class="media-body">
                       <h4 class="g-font-size-16">
                         <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">SPurno</a> <small class="g-color-gray-dark-v4">@SPurno</small>
@@ -1768,7 +1768,7 @@
                   </article>
 
                   <article class="media g-mb-35">
-                    <img class="d-flex u-shadow-v25 g-width-40 g-height-40 rounded-circle mr-3" src="assets/img/logo/logo.png" alt="SPurno Animation Studio">
+                    <img class="d-flex u-shadow-v25 g-width-40 g-height-40 rounded-circle mr-3" src="images/spurno-logo.png" alt="SPurno Animation Studio">
                     <div class="media-body">
                       <h4 class="g-font-size-16 g-color-gray-dark-v1">
                         <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Pixeel</a> <small class="g-color-gray-dark-v4">@Anonymous</small>
@@ -1779,7 +1779,7 @@
                   </article>
 
                   <article class="media">
-                    <img class="d-flex u-shadow-v25 g-width-40 g-height-40 rounded-circle mr-3" src="assets/img/logo/logo.png" alt="SPurno Animation Studio">
+                    <img class="d-flex u-shadow-v25 g-width-40 g-height-40 rounded-circle mr-3" src="images/spurno-logo.png" alt="SPurno Animation Studio">
                     <div class="media-body">
                       <h4 class="g-font-size-16 g-color-gray-dark-v1">
                         <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Anonymous</a> <small class="g-color-gray-dark-v4">@Anonymous</small>
