--- a/infographic-template.html
+++ b/infographic-template.html
@@ -281,7 +281,7 @@
                       <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
 
                     <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling" aria-labelledby="mega-menu-label-3">
+                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-height-300 g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
                       <div class="row">
                         <div class="col-lg-4">
                           <article>
@@ -615,7 +615,7 @@
                       <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
 
                     <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling" aria-labelledby="mega-menu-label-3">
+                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-height-300 g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
                       <div class="row">
                         <div class="col-lg-4">
                           <article>
