--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <nav class="js-mega-menu navbar navbar-expand-lg g-px-0">
             <div class="container g-px-15">
               <!-- Responsive Toggle Button -->
-              <button class="navbar-toggler navbar-toggler-right btn g-line-height-1 g-brd-none g-pa-0 ml-auto" type="button"
+              <button class="navbar-toggler navbar-toggler-right btn g-line-height-1 g-brd-none g-pa-20 ml-auto" type="button"
                       aria-label="Toggle navigation"
                       aria-expanded="false"
                       aria-controls="navBar"
@@ -87,7 +87,7 @@
 
 
               <!-- Navigation -->
-              <div class="collapse navbar-collapse align-items-center flex-sm-row g-pt-10 g-pt-5--lg" id="navBar">
+              <div class="collapse navbar-collapse align-items-center flex-sm-row g-pt-10 g-pt-5--lg g-mr-40--lg" id="navBar">
                 <ul class="navbar-nav g-font-weight-600">
  
 
@@ -131,7 +131,7 @@
                       <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
 
                     <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-height-600 g-bg-cyan-gradient-opacity-v1" aria-labelledby="mega-menu-label-1">
+                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-bg-cyan-gradient-opacity-v1" aria-labelledby="mega-menu-label-1">
                       <div class="row">
                         <div class="col-lg-2">
                           <ul class="list-unstyled mb-0">
@@ -278,7 +278,7 @@
                       <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
 
                     <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-height-300 g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
+                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling  g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
                       <div class="row">
                         <div class="col-lg-4">
                           <article>
@@ -612,7 +612,7 @@
                       <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
 
                     <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-height-300 g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
+                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling  g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
                       <div class="row">
                         <div class="col-lg-4">
                           <article>
