--- a/infographic-template.html
+++ b/infographic-template.html
@@ -67,7 +67,7 @@
     <main>
       <!-- Header -->
       <header id="js-header" class="u-header u-header--static u-shadow-v19">
-            <div itemscope class="u-header__section u-header__section--light g-bg-purple-gradient-opacity-v1 g-transition-0_3 g-py-10">
+            <div itemscope class="u-header__section u-header__section--light g-bg-lightblue-radialgradient-circle g-transition-0_3 g-py-10">
           <nav class="js-mega-menu navbar navbar-expand-lg g-px-0">
             <div class="container g-px-15">
               <!-- Responsive Toggle Button -->
@@ -134,7 +134,7 @@
                       <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
 
                     <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-bg-cyan-gradient-opacity-v1" aria-labelledby="mega-menu-label-1">
+                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-bg-lightblue-radialgradient-circle" aria-labelledby="mega-menu-label-1">
                       <div class="row">
                         <div class="col-lg-2">
                           <ul class="list-unstyled mb-0">
@@ -155,7 +155,7 @@
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="typography.html">Typography Animation</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                              <a class="g-color-main g-color-main--hover" href="advertising-template.html">Advertising Template</a></li>
+                              <a class="g-color-main g-color-main--hover" href="advertisement-design.html">Advertisement Design</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="animation-studio-after-effects.html">Animation Studio After Effects</a></li>
                             </ul>
