--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                        aria-haspopup="true"
                        aria-expanded="false"
                        aria-controls="nav-submenu--home">
-                      Shop Now
+                       <span class="u-icon-v1">
+                        <i class="icon-hotel-restaurant-105 u-line-icon-pro"></i>
+                      </span>
                     </a>
 
                     <!-- Submenu -->
@@ -127,8 +129,11 @@
                       data-animation-in="fadeIn"
                       data-animation-out="fadeOut"
                       data-position="right">
-                    <a id="mega-menu-label-1" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">Animation
-                      <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
+                    <a id="mega-menu-label-1" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">
+                        <span class="u-icon-v1">
+                          <i class="icon-education-187 u-line-icon-pro"></i>
+                        </span>
+                    </a> 
 
                     <!-- Mega Menu -->
                     <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling g-bg-lightblue-radialgradient-circle" aria-labelledby="mega-menu-label-1">
@@ -274,8 +279,11 @@
                       data-animation-in="fadeIn"
                       data-animation-out="fadeOut"
                       data-position="right">
-                    <a id="mega-menu-label-3" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">Background
-                      <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
+                    <a id="mega-menu-label-3" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">
+                      <span class="u-icon-v1">
+                        <i class="icon-education-004 u-line-icon-pro"></i>
+                      </span>
+                    </a>
 
                     <!-- Mega Menu -->
                     <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling  g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
@@ -413,13 +421,16 @@
                   </li>
                   <!-- End Mega Menu Item -->
 
-                  <!-- Mega Menu Item -->
+                  <!-- Hi -Tech Mega Menu Item -->
                   <li class="hs-has-mega-menu nav-item g-mx-10--lg g-mx-20--xl"
                       data-animation-in="fadeIn"
                       data-animation-out="fadeOut"
                       data-position="right">
-                    <a id="mega-menu-label-4" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">Hi-Tech
-                      <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
+                    <a id="mega-menu-label-4" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">
+                      <span class="u-icon-v1">
+                        <i class="icon-education-070 u-line-icon-pro"></i>
+                      </span>
+                    </a>
 
                     <!-- Mega Menu -->
                     <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling" aria-labelledby="mega-menu-label-4">
@@ -493,13 +504,15 @@
                   </li>
                   <!-- End Mega Menu Item -->
 
-                  <!-- Mega Menu Item -->
+                  <!-- Earn Mega Menu Item -->
                   <li class="hs-has-mega-menu nav-item g-mx-10--lg g-mx-20--xl"
                       data-animation-in="fadeIn"
                       data-animation-out="fadeOut"
                       data-position="right">
-                    <a id="mega-menu-label-6" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">Earn
-                      <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
+                    <a id="mega-menu-label-6" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">
+                      <span class="u-icon-v1">
+                        <i class="icon-finance-211 u-line-icon-pro"></i>
+                      </span></a>
 
                     <!-- Mega Menu -->
                     <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling" aria-labelledby="mega-menu-label-6">
@@ -604,12 +617,17 @@
                     <!-- End Mega Menu -->
                   </li>
                   <!-- End Mega Menu Item -->
+
+                  <!-- Presentation mega menu item  -->
                   <li class="hs-has-mega-menu nav-item g-mx-10--lg g-mx-20--xl"
                       data-animation-in="fadeIn"
                       data-animation-out="fadeOut"
                       data-position="right">
-                    <a id="mega-menu-label-3" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">Presentation
-                      <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
+                    <a id="mega-menu-label-3" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">
+                      <span class="u-icon-v1">
+                        <i class="icon-education-002 u-line-icon-pro"></i>
+                      </span>
+                      </a>
 
                     <!-- Mega Menu -->
                     <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling  g-bg-purple-gradient-opacity-v1" aria-labelledby="mega-menu-label-3">
@@ -745,13 +763,17 @@
                     </div>
                     <!-- End Mega Menu -->
                   </li>
-                  <!-- Main -->
+                  <!-- Presentation mega menu end -->
+
+                  <!-- contact us menu  -->
                   <li class="nav-item g-mx-10--lg g-mx-20--xl">
-                    <a id="nav-link--pages" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="contact-us.html">
-                      Contact Us
+                    <a id="nav-link--pages" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="contact-us.html"> 
+                      <span class="u-icon-v1">
+                        <i class="icon-transport-088 u-line-icon-pro"></i>
+                      </span>
                     </a>
                   </li>
-                  <!-- End Main -->
+                  <!-- Coontact us End -->
                 </ul>
               </div>
               <!-- End Navigation -->
